my profile page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
   <body>
     <div class ="container">
     <h1>Linlu Liu</h1>
-    <img src="images/profile_pic.png" alt="profile pic">
+    <img src="images/image.png" alt="profile pic">
+    <div id="position"> <img src="images/position.png" alt="location_icon"  width="10">&thinsp;&thinsp;Tokyo,&thinsp;Japan</div>
     <ul>
-      <li><em>Profession:</em> Coder</li>
+      <li><em>Profession:</em> UX Designer</li>
       <li><em>Age:</em> 23</li>
       <li> Hi, I'm linlu, a foodie and coder candidate 🎶</li>
     </ul>
     <button type="submit">👀Portfolio </button>
   </div>
   <div class="social-links">
-    <a href="" target="_blank"><img src="images/facebook_icon.png" alt="IG" width="24" ></a>
-    <a href="" target="_blank"><img src="images/instagram_icon.png" alt="FB"  width="24"></a>
-    <a href="" target="_blank"><img src="images/twitter_icon.png" alt="Tr" width="24"></a>
+    <a href="https://www.facebook.com/profile.php?id=100009863865228" target="_blank"><img src="images/facebook_icon.png" alt="IG" width="24" ></a>
+    <a href="https://www.instagram.com/?hl=ja" target="_blank"><img src="images/instagram_icon.png" alt="FB"  width="24"></a>
+    <a href="https://www.linkedin.com/in/linlu1016/" target="_blank"><img src="images/linkedin.png" alt="li" width="24"></a>
   </div>
   </body>
 </html>
