make my profile prettier

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="social-links">
     <a href="https://www.facebook.com/profile.php?id=100009863865228" target="_blank"><img src="images/facebook_icon.png" alt="IG" width="24" ></a>
-    <a href="https://www.instagram.com/?hl=ja" target="_blank"><img src="images/instagram_icon.png" alt="FB"  width="24"></a>
+    <a href="https://www.instagram.com/?hl=ja" target="_blank"><img src="images/Instagram_icon.png" alt="FB"  width="24"></a>
     <a href="https://www.linkedin.com/in/linlu1016/" target="_blank"><img src="images/linkedin.png" alt="li" width="24"></a>
   </div>
   </body>
